src/main/java/com.pingwin.compiler/gen/PingwinLanguageParser.java
// Generated from D:/yapis\PingwinLanguage.g4 by ANTLR 4.8
package com.pingwin.compiler.gen;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PingwinLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, BEGIN=5, SET=6, ELEMENT=7, ADD=8, REMOVE=9, 
		END=10, PRINT=11, INT=12, WHILE=13, FOR=14, CONST=15, IF=16, THEN=17, 
		CALL=18, RETURN=19, SEPARATOR=20, DELIMITER=21, COLON=22, GLOBAL=23, ID=24, 
		STRING=25, NUMBER=26, WS=27, PLUS=28, MINUS=29, MULTIPLY=30, DIVIDE=31, 
		NEGATION=32, EQUAL=33, NON_EQUAL=34, LESS=35, LESS_OR_EQUALS=36, GREATER=37, 
		GREATER_OR_EQUALS=38, O_BRACKET=39, C_BRACKET=40, K_O_BRACKET=41, K_C_BRACKET=42;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_digit_expression = 3, 
		RULE_intialize_set = 4, RULE_intialize_element = 5, RULE_assign_var_method_invocation = 6, 
		RULE_assign_set = 7, RULE_assign_var = 8, RULE_print = 9, RULE_operations = 10, 
		RULE_operarions_with_set = 11, RULE_simple_compare = 12, RULE_hard_compare = 13, 
		RULE_while_cicle = 14, RULE_if_then = 15, RULE_for_each = 16, RULE_global_assign_set = 17, 
		RULE_global_assign_var = 18, RULE_type = 19, RULE_type_1 = 20, RULE_signature = 21, 
		RULE_subprogram_return = 22, RULE_subprogram_non_return = 23, RULE_block_return = 24, 
		RULE_block_non_return = 25, RULE_signature_method_invokation = 26, RULE_method_invokation = 27, 
		RULE_global_program = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "digit_expression", "intialize_set", 
			"intialize_element", "assign_var_method_invocation", "assign_set", "assign_var", 
			"print", "operations", "operarions_with_set", "simple_compare", "hard_compare", 
			"while_cicle", "if_then", "for_each", "global_assign_set", "global_assign_var", 
			"type", "type_1", "signature", "subprogram_return", "subprogram_non_return", 
			"block_return", "block_non_return", "signature_method_invokation", "method_invokation", 
			"global_program"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main_program'", "','", "'='", "'sub_program'", "'begin'", "'set'", 
			"'element'", "'add'", "'remove'", "'end'", "'print'", "'int'", "'while'", 
			"'for'", "'const'", "'if'", "'then'", "'call'", "'return'", "';'", "'.'", 
			"':'", "'global'", null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'{'", 
			"'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "BEGIN", "SET", "ELEMENT", "ADD", "REMOVE", 
			"END", "PRINT", "INT", "WHILE", "FOR", "CONST", "IF", "THEN", "CALL", 
			"RETURN", "SEPARATOR", "DELIMITER", "COLON", "GLOBAL", "ID", "STRING", 
			"NUMBER", "WS", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "NEGATION", "EQUAL", 
			"NON_EQUAL", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
			"O_BRACKET", "C_BRACKET", "K_O_BRACKET", "K_C_BRACKET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PingwinLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PingwinLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PingwinLanguageParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PingwinLanguageParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(BEGIN);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << ELEMENT) | (1L << PRINT) | (1L << INT) | (1L << WHILE) | (1L << FOR) | (1L << IF) | (1L << CALL) | (1L << ID))) != 0)) {
				{
				{
				setState(62);
				statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Assign_varContext assign_var() {
			return getRuleContext(Assign_varContext.class,0);
		}
		public Assign_setContext assign_set() {
			return getRuleContext(Assign_setContext.class,0);
		}
		public OperationsContext operations() {
			return getRuleContext(OperationsContext.class,0);
		}
		public Assign_var_method_invocationContext assign_var_method_invocation() {
			return getRuleContext(Assign_var_method_invocationContext.class,0);
		}
		public While_cicleContext while_cicle() {
			return getRuleContext(While_cicleContext.class,0);
		}
		public If_thenContext if_then() {
			return getRuleContext(If_thenContext.class,0);
		}
		public Method_invokationContext method_invokation() {
			return getRuleContext(Method_invokationContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Operarions_with_setContext operarions_with_set() {
			return getRuleContext(Operarions_with_setContext.class,0);
		}
		public For_eachContext for_each() {
			return getRuleContext(For_eachContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				assign_var();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				assign_set();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				operations();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				assign_var_method_invocation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				while_cicle();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				if_then();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				method_invokation();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(77);
				print();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(78);
				operarions_with_set();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(79);
				for_each();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Digit_expressionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PingwinLanguageParser.ID, 0); }
		public TerminalNode O_BRACKET() { return getToken(PingwinLanguageParser.O_BRACKET, 0); }
		public List<Digit_expressionContext> digit_expression() {
			return getRuleContexts(Digit_expressionContext.class);
		}
		public Digit_expressionContext digit_expression(int i) {
			return getRuleContext(Digit_expressionContext.class,i);
		}
		public TerminalNode C_BRACKET() { return getToken(PingwinLanguageParser.C_BRACKET, 0); }
		public TerminalNode NUMBER() { return getToken(PingwinLanguageParser.NUMBER, 0); }
		public TerminalNode MULTIPLY() { return getToken(PingwinLanguageParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(PingwinLanguageParser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(PingwinLanguageParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PingwinLanguageParser.MINUS, 0); }
		public Digit_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterDigit_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitDigit_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitDigit_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Digit_expressionContext digit_expression() throws RecognitionException {
		return digit_expression(0);
	}

	private Digit_expressionContext digit_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Digit_expressionContext _localctx = new Digit_expressionContext(_ctx, _parentState);
		Digit_expressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_digit_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(83);
				match(ID);
				}
				break;
			case O_BRACKET:
				{
				setState(84);
				match(O_BRACKET);
				setState(85);
				digit_expression(0);
				setState(86);
				match(C_BRACKET);
				}
				break;
			case NUMBER:
				{
				setState(88);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(97);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(91);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(92);
						_la = _input.LA(1);
						if ( !(_la==MULTIPLY || _la==DIVIDE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(93);
						digit_expression(6);
						}
						break;
					case 2:
						{
						_localctx = new Digit_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_digit_expression);
						setState(94);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(95);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(96);
						digit_expression(5);
						}
						break;
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Intialize_setContext extends ParserRuleContext {
		public TerminalNode K_C_BRACKET() { return getToken(PingwinLanguageParser.K_C_BRACKET, 0); }
		public TerminalNode K_O_BRACKET() { return getToken(PingwinLanguageParser.K_O_BRACKET, 0); }
		public List<TerminalNode> ID() { return getTokens(PingwinLanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PingwinLanguageParser.ID, i);
		}
		public TerminalNode MULTIPLY() { return getToken(PingwinLanguageParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(PingwinLanguageParser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(PingwinLanguageParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PingwinLanguageParser.MINUS, 0); }
		public Intialize_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intialize_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterIntialize_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitIntialize_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitIntialize_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Intialize_setContext intialize_set() throws RecognitionException {
		Intialize_setContext _localctx = new Intialize_setContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intialize_set);
		int _la;
		try {
			int _alt;
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_C_BRACKET:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(102);
				match(K_C_BRACKET);
				setState(103);
				match(K_O_BRACKET);
				}
				}
				break;
			case K_O_BRACKET:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(104);
				match(K_O_BRACKET);
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(105);
						match(ID);
						setState(106);
						match(T__1);
						}
						} 
					}
					setState(111);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				{
				setState(112);
				match(ID);
				}
				setState(113);
				match(K_C_BRACKET);
				}
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(114);
				match(ID);
				setState(115);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(116);
				match(ID);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Intialize_elementContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PingwinLanguageParser.STRING, 0); }
		public Intialize_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intialize_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterIntialize_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitIntialize_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitIntialize_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Intialize_elementContext intialize_element() throws RecognitionException {
		Intialize_elementContext _localctx = new Intialize_elementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_intialize_element);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_var_method_invocationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PingwinLanguageParser.ID, 0); }
		public Method_invokationContext method_invokation() {
			return getRuleContext(Method_invokationContext.class,0);
		}
		public TerminalNode CONST() { return getToken(PingwinLanguageParser.CONST, 0); }
		public Assign_var_method_invocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_var_method_invocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterAssign_var_method_invocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitAssign_var_method_invocation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitAssign_var_method_invocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_var_method_invocationContext assign_var_method_invocation() throws RecognitionException {
		Assign_var_method_invocationContext _localctx = new Assign_var_method_invocationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign_var_method_invocation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			type();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(122);
				match(CONST);
				}
			}

			setState(125);
			match(ID);
			setState(126);
			match(T__2);
			setState(127);
			method_invokation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_setContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(PingwinLanguageParser.SET, 0); }
		public TerminalNode ID() { return getToken(PingwinLanguageParser.ID, 0); }
		public TerminalNode SEPARATOR() { return getToken(PingwinLanguageParser.SEPARATOR, 0); }
		public Intialize_setContext intialize_set() {
			return getRuleContext(Intialize_setContext.class,0);
		}
		public TerminalNode CONST() { return getToken(PingwinLanguageParser.CONST, 0); }
		public Assign_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterAssign_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitAssign_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitAssign_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_setContext assign_set() throws RecognitionException {
		Assign_setContext _localctx = new Assign_setContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(SET);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(130);
				match(CONST);
				}
			}

			setState(133);
			match(ID);
			setState(134);
			match(T__2);
			{
			setState(135);
			intialize_set();
			}
			setState(136);
			match(SEPARATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_varContext extends ParserRuleContext {
		public Type_1Context type_1() {
			return getRuleContext(Type_1Context.class,0);
		}
		public TerminalNode ID() { return getToken(PingwinLanguageParser.ID, 0); }
		public TerminalNode SEPARATOR() { return getToken(PingwinLanguageParser.SEPARATOR, 0); }
		public Digit_expressionContext digit_expression() {
			return getRuleContext(Digit_expressionContext.class,0);
		}
		public Intialize_elementContext intialize_element() {
			return getRuleContext(Intialize_elementContext.class,0);
		}
		public TerminalNode CONST() { return getToken(PingwinLanguageParser.CONST, 0); }
		public Assign_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).enterAssign_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PingwinLanguageListener ) ((PingwinLanguageListener)listener).exitAssign_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PingwinLanguageVisitor ) return ((PingwinLanguageVisitor<? extends T>)visitor).visitAssign_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_varContext assign_var() throws RecognitionException {
		Assign_varContext _localctx = new Assign_varContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			type_1();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(139);
				match(CONST);
				}
			}

			setState(142);
			match(ID);
			setState(143);
			match(T__2);
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case NUMBER:
			case O_BRACKET:
				{
				setState(144);
				digit_expression(0);
				}
				break;
			case STRING:
				{
				setState(145);
				intialize_element();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(148);
			match(SEPARATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
